/*
 * $Id: ChangeLog,v 1.5377 2007/03/07 10:30:05 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-08 00:03 UTC+0100 Ath <Ath1 at sourceforge.net>
  * include/std.ch
    + added SET BACKGROUND TASKS because it was still missing after PP-port  

2007-03-07 11:36 UTC+0100 Miguel Angel Marchuet <miguelangel/at/marchuet.net>
  * harbour/source/rdd/bmdbfcdx/bmdbfcdx1.c
    * casting

2007-03-04 14:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbpp.h
  * xharbour/source/compiler/harbour.c
  * xharbour/source/compiler/ppcomp.c
  * xharbour/source/pp/ppcore.c
    + added support for preprocessor tracing (.ppt files) with -pt switch

  * xharbour/source/vm/hvm.c
    ! fixed HVM stack corruption in code like: x:="abc"; ? x[3]-5

2007-03-04 00:30 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/compiler/harbour.c
    * Commented out unused iProcess variable in function hb_compProcessRSPFile()

2007-03-03 17:15 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * include/std.ch
    + Added missing clause Color to @ prompt command

2007-03-02 21:25 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/std.ch
    + Added missing support for TEXT INTO <lValue>

  * source/compiler/harbour.slx
    * Commented more code no longer used due to new PP

2007-03-02 12:47 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    + Added to new PP pseudo function overloading support as per original changelog 2007-01-12 21:33 UTC-0500 Ron Pinkas <ron/at/xharbour.com>

2007-03-02 03:30 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/source/rdd/dbf1.c
  * harbour/source/rdd/delim1.c
  * harbour/source/rdd/sdf1.c
  * harbour/source/rdd/dbfcdx/dbfcdx1.c
  * harbour/source/rdd/dbffpt/dbffpt1.c
  * harbour/source/rdd/hbsix/sxcompr.c